--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,7 +36,7 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
-    transition: width 0.5s height 0.5s;
+    transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
 
