--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,6 +8,7 @@
     
     section#login{
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem{
@@ -26,10 +27,12 @@
 
      body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        
     }
 
     section#login{
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem{
@@ -48,7 +51,8 @@
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 
     
